[metadata]
name = daesim2_analysis
version = 0.0.1
keywords = daesim, analysis, model, agroecosystem, python
author = Alexander Norton
author_email = alexander.norton@anu.edu.au
description = analysis support for the dynamic agro-ecosystem simulator
license = MIT

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy
    scipy
    matplotlib
    pandas
    SALib
    daesim @ git+https://github.com/NortonAlex/DAESIM@b09baa315c7697279f4c37349f45ca79d101edbb#egg=daesim

[options.packages.find]
where = src
